# work-tracker

./: .env.example  .gitignore  README.md  package-lock.json  package.json  tsconfig.base.json
.github/workflows/: tauri-release.yml
apps/desktop/: package.json  tsconfig.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: README.md  icon.icns
apps/desktop/src-tauri/src/: autostart.rs  gh_cmds.rs  lib.rs  main.rs  sysinfo_cmds.rs  tray.rs
apps/web/: drizzle.config.ts  middleware.ts  next.config.ts  package.json  tsconfig.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/api/commits/: route.ts
apps/web/app/api/heatmap/: route.ts
apps/web/app/api/ingest/: route.ts
apps/web/app/chat/: chat.tsx  page.tsx
apps/web/app/dashboard/: page.tsx  today.tsx
apps/web/app/report/: page.tsx  report-builder.tsx
apps/web/app/settings/: page.tsx  settings-form.tsx
apps/web/app/sign-in/: page.tsx
apps/web/app/timesheet/: page.tsx  timesheet.tsx
apps/web/app/track/: page.tsx  tracker.tsx
apps/web/components/: activity-heatmap.tsx  app-shell.tsx  markdown.tsx
apps/web/db/: index.ts  migrate.ts  schema.ts
apps/web/db/migrations/: 0000_worried_abomination.sql  0001_naive_aqueduct.sql  0002_curvy_sunspot.sql
apps/web/lib/: agent.ts  capture.ts  csv.ts  data-client.ts  db-local.ts  digest.ts  llm.ts  openrouter.ts  report.ts  settings-store.ts  storage-mode.ts  tauri-bridge.ts  time.ts  vlm.ts
apps/web/lib/auth/: client.ts  server.ts  session.ts
(+12 files in other folders)
